[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Ian Channing <ian@ianchanning.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.1.27"
image = "0.13.0"
crossbeam = "0.2.8"
atomic_chunks_mut = { git = "https://github.com/jimblandy/atomic-chunks-mut.git" }
